# terminal-use

./: .gitignore  README.md  pyproject.toml
src/terminal_use/: __init__.py  main.py
tests/: test.py
